--- a/main.html
+++ b/main.html
@@ -4,12 +4,47 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+
+	<div class='card-deck'>
+		<h1 class='card-header mb-3'>Welcome to Sync5</h1>
+
+<div class="card">
+  <h5 class="card-header">New Features</h5>
+  <div class="card-body">
+    <h5 class="card-title">Mobile and Tablet support</h5>
+    <p class="card-text">With this new update you will be able to sync your work across a large number of platforms.</p>
+    <a href="#" class="btn btn-primary">Read more</a>
+  </div>
+</div>
+
+
+<div class="card text-bg-danger mb-3" style="max-width: 18rem;">
+  <div class="card-header">Alert</div>
+  <div class="card-body">
+    <h5 class="card-title">Node Dead</h5>
+    <p class="card-text">Node 5 (east-us) is offline for the last 12 days.</p>
+  </div>
+</div>
+
+<div class="card mb-3">
+  <img src="https://wallpaperaccess.com/full/4712055.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">President under Pressure</h5>
+    <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
+    <p class="card-text"><small class="text-muted">Last updated 12 mins ago</small></p>
+  </div>
+</div>
+	</div>
+
+    <script type="text/javascript" src="./script.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
 </body>
 
