--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 </div>
 
 
-<div class="card text-bg-danger mb-3" style="max-width: 18rem;">
+<div class="card bg-danger text-white mb-3" style="max-width: 18rem;">
   <div class="card-header">Alert</div>
   <div class="card-body">
     <h5 class="card-title">Node Dead</h5>
